@@ -82,6 +82,8 @@ static void gnc_entry_ledger_layout_add_cells (GncEntryLedger *ledger,
       CELL_ALIGN_RIGHT, FALSE, FALSE },
     { ENTRY_TAXVAL_CELL, PRICE_CELL_TYPE_NAME, N_("sample:999.00")+7,
       CELL_ALIGN_RIGHT, FALSE, FALSE },
+    { ENTRY_BILLABLE_CELL, RECN_CELL_TYPE_NAME, N_("sample:BI")+7,
+      CELL_ALIGN_LEFT, FALSE, FALSE },
   };
   int i;
 
@@ -106,7 +108,7 @@ static void gnc_entry_ledger_layout_add_cursors (GncEntryLedger *ledger,
     break;
   case GNCENTRY_BILL_ENTRY:
   case GNCENTRY_BILL_VIEWER:
-    num_cols = 8;
+    num_cols = 9;
     break;
   default:
     g_assert (FALSE);
@@ -163,6 +165,7 @@ static void gnc_entry_ledger_set_cells (GncEntryLedger *ledger,
     gnc_table_layout_set_cell (layout, curs, ENTRY_QTY_CELL, 0, 5);
     gnc_table_layout_set_cell (layout, curs, ENTRY_PRIC_CELL, 0, 6);
     gnc_table_layout_set_cell (layout, curs, ENTRY_VALUE_CELL, 0, 7);
+    gnc_table_layout_set_cell (layout, curs, ENTRY_BILLABLE_CELL, 0, 8);
 
     break;
 
