@@ -1,3 +1,9 @@
+2002-07-10  Derek Atkins  <derek@ihtfp.com>
+
+	* add Billable flag and Bill-To (owner) to line-item entries.
+	* save these flags only if the entry is attached to a Bill.
+	* add a Billable column to Bill register
+
 2002-07-09  Derek Atkins  <derek@ihftp.com>
 
 	* "global-replace for-each-in-order for-each" because the former
